Add Scala 3 cross-build for quill-engine